--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <header class="bg-white/80 backdrop-blur-md fixed top-0 left-0 right-0 z-50 shadow-sm">
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
-                <a href="#" class="text-xl font-bold text-slate-800">Alexander Gu</a>
+                <a href="JP_KRKE_Subtitle_Transcription_Paper.pdf" class="text-xl font-bold text-slate-800">Alexander Gu</a>
                 <nav class="hidden md:flex space-x-8">
                     <a href="#about" class="nav-link text-slate-600 font-medium">About</a>
                     <a href="#projects" class="nav-link text-slate-600 font-medium">Projects</a>
@@ -142,7 +142,6 @@
                              <div class="flex border-b mb-4">
                                 <button data-tab-target="media-overview" class="tab-button active-tab py-2 px-4 font-medium rounded-t-lg">Overview</button>
                                 <button data-tab-target="media-role" class="tab-button inactive-tab py-2 px-4 font-medium rounded-t-lg">My Role</button>
-                                <button data-tab-target="media-viz" class="tab-button inactive-tab py-2 px-4 font-medium rounded-t-lg">Dashboard</button>
                             </div>
                             <div class="tab-content">
                                 <div id="media-overview" class="prose prose-slate max-w-none">
@@ -154,10 +153,6 @@
                                         <li><strong>Backend & Database Optimization:</strong> I was primarily responsible for the backend logic and database architecture. I designed the PostgreSQL schema and implemented key optimizations, such as creating <strong>sorted indexes and pagination</strong>, which successfully <strong>reduced database query times by 30%</strong>.</li>
                                         <li><strong>Dashboard & Statistics:</strong> I developed the logic for the user dashboard, which calculated and displayed aggregate statistics, turning raw user data into understandable and interesting visualizations.</li>
                                     </ul>
-                                </div>
-                                <div id="media-viz" class="hidden prose prose-slate max-w-none">
-                                     <p>The dashboard was designed to visualize user-specific statistics on media consumption. While no real-world data was collected, the functionality was built to process and display these insights dynamically.</p>
-                                     <a href="#" target="_blank" class="mt-4 inline-block text-teal-600 font-medium hover:text-teal-700">Watch Video Showcase &rarr;</a>
                                 </div>
                             </div>
                         </div>
