--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <header class="bg-white/80 backdrop-blur-md fixed top-0 left-0 right-0 z-50 shadow-sm">
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
-                <a href="JP_KRKE_Subtitle_Transcription_Paper.pdf" class="text-xl font-bold text-slate-800">Alexander Gu</a>
+                <a href="#" class="text-xl font-bold text-slate-800">Alexander Gu</a>
                 <nav class="hidden md:flex space-x-8">
                     <a href="#about" class="nav-link text-slate-600 font-medium">About</a>
                     <a href="#projects" class="nav-link text-slate-600 font-medium">Projects</a>
@@ -131,7 +131,7 @@
                         </div>
                         <div class="mt-6 flex space-x-6">
                             <a href="https://github.com/alexzgu/karaoke_subtitle_dataset" target="_blank" class="nav-link text-teal-600 font-medium hover:text-teal-700">View Dataset on GitHub</a>
-                            <a href="#" target="_blank" class="nav-link text-teal-600 font-medium hover:text-teal-700">Read Paper (PDF)</a>
+                            <a href="JP_KRKE_Subtitle_Transcription_Paper.pdf" target="_blank" class="nav-link text-teal-600 font-medium hover:text-teal-700">Read Paper (PDF)</a>
                         </div>
                     </div>
 
